# netflix-data-graph-analysis

./: analise.ipynb  main.py  pyproject.toml
src/: grafo_direcionado.pkl  main.py
src/utils/: graph.py
utils/: graph.py
